--- a/html/html3.html
+++ b/html/html3.html
@@ -12,5 +12,11 @@
 
     </div>
 <script src="../js/main.js" type="module"></script>
+<script src="../js/checker_js/finish.js" type="module"></script>
+<script src="../js/fieldOut.js" type="module"></script>
+<script src="../js/hero.js" type="module"></script>
+<script src="../js/js3.js" type="module"></script>
+<script src="../js/visualization.js" type="module"></script>
+<script></script>
 </body>
 </html>
